<resources>
    <!-- Basic application Strings -->
    <string name="app_name">SwanData</string>
    <string name="title_activity_display_swan_code">SwanCode</string>
    <string name="title_activity_display_swan_codes_list">Select a Sample</string>
    <string name="title_activity_display_swan_data">SwanData</string>
    <string name="title_activity_display_swan_data_list">Select a Swan</string>
    <string name="title_activity_export_import_settings">Backup &amp; Reset </string>
    <string name="author">Sascha Lutzenberger - 2015</string>

    <string name="settings">Settings</string>

    <!-- Application Settings strings -->
    <string name="export_settings">Backup Settings</string>
    <string name="export_settings_summary">All the settings will be backed up to the preferences file stored in the SwanData directory. (If a previous backup exists, this will overwrite the previous backup)</string>
    <string name="import_settings">Restore Settings</string>
    <string name="import_settings_summary">The settings will be restored from the preferences file in the SwanData directory. This will overwrite all the settings in this program, if any settings are not defined in the preferences file, the default values will be loaded.</string>
    <string name="reset_default_settings">Reset Settings</string>
    <string name="reset_default_settings_summary">All the settings will be restored to their default values.</string>

    <!-- Dialog strings -->
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete_message">This will delete the selected data from your device. This can not be undone.</string>
    <string name="dialog_delete_positive_button">Delete now</string>
    <string name="dialog_delete_title">Delete data?</string>
    <string name="dialog_reload_message">This will reload the data files. All the changes that have been made will be lost. This can not be undone.</string>
    <string name="dialog_reload_positive_button">Reload now</string>
    <string name="dialog_reload_title">Reload data files?</string>
    <string name="dialog_save_message">Do you want to save your changes now?</string>
    <string name="dialog_save_negative_button">Save later</string>
    <string name="dialog_save_positive_button">Save now</string>
    <string name="dialog_save_title">Save changes?</string>

    <!-- Directories strings -->
    <string name="directory_all_created">Working directories have been created…</string>
    <string name="directory_base_not_existent">Base directory does not exist…</string>
    <string name="directory_failed_create_document">Document directory could not be created…</string>
    <string name="directory_failed_create_settings">Settings directory could not be created…</string>
    <string name="directory_failed_create_swan">Swan directory could not be created…</string>

    <!-- hint fields -->
    <string name="hint_darvic_code">darvic code</string>

    <!-- Intent Strings -->
    <string name="intent_darvic">darvic</string>
    <string name="intent_field_id">field_id</string>
    <string name="intent_new_data">new_data</string>

    <!-- Menu Item strings -->
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_new_swan_code">Add SwanCode</string>
    <string name="menu_new_swan_data">Add SwanData</string>
    <string name="menu_open">Open data</string>
    <string name="menu_reload_files">Reload data files</string>
    <string name="menu_save">Save DataFiles</string>
    <string name="menu_search_sample">Search for SwanCodes</string>
    <string name="menu_search_data">Search for SwanData</string>

    <!-- Messages -->
    <string name="message_change_settings_to_display">Please change settings to display an item…</string>
    <string name="message_column_header_not_defined">not defined…</string>
    <string name="message_deleted_data">Deleted selected data</string>
    <string name="message_enter_darvic_code">Please enter a DARVIC code:</string>
    <string name="message_entry_updated">Entry has been updated…</string>
    <string name="message_files_processed">Files are being processed…</string>
    <string name="message_files_updated">Files are being updated…</string>
    <string name="message_no_data_found">No data found for this DARVIC code…</string>
    <string name="message_no_displayable_data">No displayable data</string>
    <string name="message_no_samples_found">No samples found for this DARVIC code…</string>
    <string name="message_number_of_samples">The swan was sampled %1$s times.</string>
    <string name="message_read_failed">Failed reading in the files…</string>
    <string name="message_read_success">Files successfully read in…</string>
    <string name="message_searching_matches">Searching for matches…</string>
    <string name="message_settings_export_failed">Failed to export settings…</string>
    <string name="message_settings_export_success">Settings successfully exported…</string>
    <string name="message_settings_import_failed">Failed to import settings…</string>
    <string name="message_settings_import_success">Settings successfully imported…</string>
    <string name="message_settings_reset_success">Settings successfully restored…</string>
    <string name="message_update_failed">Failed updating the files…</string>
    <string name="message_update_success">Files successfully updated…</string>
    <string name="message_wait">Please wait</string>

    <!-- Settings strings -->
    <string name="settings_column_name_settings">Column Settings</string>
    <string name="settings_data_file_settings">DataFile Settings</string>
    <string name="settings_general_settings">General Settings</string>
    <string name="settings_swan_code_settings">SwanCode Settings</string>
    <string name="settings_swan_data_settings">SwanData Settings</string>
</resources>
