<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_reload_files"
        android:title="@string/menu_reload_files"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_new_swan_code"
        android:title="@string/menu_new_swan_code"
        android:icon="@drawable/ic_add_codes"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_new_swan_data"
        android:title="@string/menu_new_swan_data"
        android:icon="@drawable/ic_add_data"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_save"
        android:title="@string/menu_save"
        android:icon="@drawable/ic_save"
        app:showAsAction="always" />

    <item android:id="@+id/menu_search_data"
        android:title="@string/menu_search_data"
        android:icon="@drawable/ic_search_data"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_search_sample"
        android:title="@string/menu_search_sample"
        android:icon="@drawable/ic_search_codes"
        app:showAsAction="always" />

    <item android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />
</menu>