<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_edit"
        android:title="@string/menu_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always" />

    <item android:id="@+id/menu_save"
        android:title="@string/menu_save"
        android:icon="@drawable/ic_save"
        app:showAsAction="always" />

    <item android:id="@+id/menu_search_sample"
        android:title="@string/menu_search_sample"
        android:icon="@drawable/ic_samples"
        app:showAsAction="always" />

    <item android:id="@+id/menu_delete"
        android:title="@string/menu_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never" />

    <item android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />
</menu>